--- a/about.html
+++ b/about.html
@@ -9,40 +9,40 @@
 <body>
   <div class="body">
     <div class="header">
-        <div class="logo">
-          <img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="logo_image">
-        </div> 
-        <div class="nav-bar">      
-            <div class="nav-elements">
-                <a href="index.html">
-                <i class="fas fa-home fa-lg"> </i> 
-                <h1> Home </h1>
-                </a>
-                <div class="underline"></div>
-              </div>
+      <div class="logo">
+        <img src="https://assets.codepen.io/6306176/gulp-logo-light.png" alt="logo_image">
+      </div> 
+      <div class="nav-bar">      
           <div class="nav-elements">
-            <a href="products.html">
-            <i class="fa-solid fa-location-pin fa-lg"> </i> 
-            <h1> Our Products </h1> 
-            </a>
-            <div class="underline"></div>
-          </div>
-          <div class="nav-elements">
-            <a href="about.html">
-            <i class="fa-solid fa-phone fa-lg "></i> 
-            <h1> About Us </h1>
-            </a>
-            <div class="underline"></div>
-          </div> 
-          <div class="nav-elements">
-            <a href="about.html">
-              <i class="fas fa-home fa-lg"></i> 
-              <h1> Contact Us </h1>
-            </a>
+              <i class="fas fa-home fa-lg"> </i> 
+              <a href="index.html"> <h1> Home </h1>
+              </a>
               <div class="underline"></div>
             </div>
-        </div>  
-      </div>
+        <div class="nav-elements">
+          
+          <i class="fa-solid fa-location-pin fa-lg"> </i> 
+          <a href="products.html"><h1> Our Products </h1> 
+          </a>
+          <div class="underline"></div>
+        </div>
+        <div class="nav-elements">
+         
+          <i class="fa-solid fa-phone fa-lg "></i> 
+          <a href="about.html">
+          <h1> About Us </h1>
+          </a>
+          <div class="underline"></div>
+        </div> 
+        <div class="nav-elements">
+            <i class="fas fa-home fa-lg"></i> 
+            <a href="contact.html">
+            <h1> Contact Us </h1>
+          </a>
+            <div class="underline"></div>
+          </div>
+      </div>  
+    </div>
 
     <div class="main-content">
       <div class="about">
@@ -65,8 +65,13 @@
   </div>
 
   <div class="footer">
-    <h3> (c) 2022 Gulp Roast Coffee. All rights reserved. </h3>
+    <h5> (c) 2022 Gulp Roast Coffee. All rights reserved. </h5>
+    <h5> © 2022 Trilogy Education Services, a 2U, Inc. brand. All Rights Reserved.
+This site is operated by Trilogy Education Services for educational  purposes only. This is not a restaurant website. This is a fictitious company and scenario intended only for internal academic purposes.
+       </h5>
   </div>
+
+
 </div>
 <script src="https://kit.fontawesome.com/22b389bd2b.js" crossorigin="anonymous"></script>
 <script src="about.js"></script> <!-- Include your JavaScript file -->
