--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,22 @@
             </div>
         <div class="nav-elements">
           
-          <i class="fa-solid fa-location-pin fa-lg"> </i> 
+          <i class="fa-solid fa-mug-hot fa-lg"> </i> 
           <a href="products.html"><h1> Our Products </h1> 
           </a>
           <div class="underline"></div>
         </div>
         <div class="nav-elements">
          
-          <i class="fa-solid fa-phone fa-lg "></i> 
+          <i class="fa-solid fa-fire fa-lg"></i> 
           <a href="about.html">
           <h1> About Us </h1>
           </a>
           <div class="underline"></div>
         </div> 
         <div class="nav-elements">
-            <i class="fas fa-home fa-lg"></i> 
-            <a href="about.html">
+            <i class="fa-solid fa-phone fa-lg"></i> 
+            <a href="contact.html">
             <h1> Contact Us </h1>
           </a>
             <div class="underline"></div>
