--- a/products.html
+++ b/products.html
@@ -53,11 +53,19 @@
         <div class="image">
           <img src="product1.jpg" alt="image" class="image">
         </div>
-          <h2>Triple-Blended Coffee Beans</h2>
-          <h4>
-          Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</h4>
+          <h2>Columbian-Blended Espresso Beans</h2>
+          <h4>With our Columbian-Blended Espresso Beans, you can finally feel like a professional barista. Bright and clean with an intense burst of flavor, these full-bodied beans strike a perfect balance between the most delicate roasts and fruitful aromas.</h4>
           <div class="button"> <h4> View Product </h4>  </div>
         </div>
+
+        <div class="product">
+          <div class="image">
+            <img src="product3.jpg" alt="image" class="image">
+          </div>
+            <h2>Lightly Roasted Coffee Beans</h2>
+            <h4>Our Lightly Roasted Coffee Beans offer the world a chance to brighten every day with a whole lot of flavor and inspiration. Try these to receive the perfect balance between bold flavor and subtle sweetness.  </h4>
+            <div class="button"> <h4> View Product </h4> </div>
+          </div>
 
 
     <div class="product">
@@ -70,15 +78,7 @@
         <div class="button"> <h4> View Product </h4>  </div>
       </div>
 
-        <div class="product">
-          <div class="image">
-            <img src="product3.jpg" alt="image" class="image">
-          </div>
-            <h2>Triple-Blended Coffee Beans</h2>
-            <h4>
-            Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</h4>
-            <div class="button"> <h4> View Product </h4> </div>
-          </div>
+       
           </div>
 
     <div class="image-container">
